# neo6502

./: README.md  openocd.sh
beep/: CMakeLists.txt  main.c
elk/: CMakeLists.txt  basic.hex  bin2hex.py  clk6502.pio  main.c  os.hex
pio-clk/: CMakeLists.txt  clk.pio  clk6502.pio  main.c
sound/: CMakeLists.txt  main.c
