cmake_minimum_required(VERSION 3.24)
include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)
project(sound)
pico_sdk_init()
add_executable(${PROJECT_NAME} main.c)
target_link_libraries(${PROJECT_NAME} pico_stdlib hardware_pwm)
pico_add_extra_outputs(${PROJECT_NAME})
pico_enable_stdio_usb(${PROJECT_NAME} 1)
pico_enable_stdio_uart(${PROJECT_NAME} 0)
